force-app/main/default/objects/SurveyQuestionResponse__c/fields/fm_ContactId__c.field-meta.xml
<CustomField>
    <fullName>fm_ContactId__c</fullName>
    <formula>SurveyTaker__r.Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Record Id</label>
    <type>Text</type>
</CustomField>