force-app/main/default/objects/SurveyQuestionResponse__c/fields/fm_SurveyQuestionName__c.field-meta.xml
<CustomField>
    <fullName>fm_SurveyQuestionName__c</fullName>
    <formula>Survey_Question__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Question Name</label>
    <type>Text</type>
</CustomField>