force-app/main/default/objects/SurveyQuestionResponse__c/fields/KDCE_fm_Survey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_Survey__c</fullName>
    <formula>SurveyTaker__r.Survey__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey</label>
    <type>Text</type>
</CustomField>