force-app/main/default/objects/SurveyQuestionResponse__c/fields/KDCE_SurveyScore__c.field-meta.xml
<CustomField>
    <fullName>KDCE_SurveyScore__c</fullName>
    <label>Survey Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>